--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.5.0
-  mysql1: ^0.20.0
   window_manager: ^0.5.1
+  mysql_client: ^0.0.27
 
 dev_dependencies:
   flutter_test:
