--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   http: ^1.5.0
   window_manager: ^0.5.1
   mysql_client: ^0.0.27
+  provider: ^6.1.5+1
+  desktop_multi_window: ^0.2.1
 
 dev_dependencies:
   flutter_test:
